--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ header .logo{
     cursor: pointer;
 }
 .spanner{
-    width: 30px;
+    width: 40px;
 }
 
 header nav{
@@ -153,7 +153,7 @@ header nav ul li a.active{
 </style>
 <body>
     <header>
-        <div class="logo">DOCUFIX <img class="spanner" src="img/spanner.png" alt=""></div>
+        <div class="logo">DOCUFI <img class="spanner" src="img/spanner.png" alt=""></div>
         <nav>
             <ul>
                 <li> <a href="#">About Us</a> </li>
