--- a/index.html
+++ b/index.html
@@ -168,8 +168,9 @@ header nav ul li a.active{
                 <li class="sub-menu"><a href="#">Support</a> 
                     <ul>
                             <li><a href="#">FAQ</a> </li>
+                            <li><a href="#">Why Use Docufix</a> </li>
                             <li><a href="#">Feedback</a> </li>
-                            <li><a href="#">User Guide</a> </li>
+                            <li><a href="#">Privacy Policy</a> </li>
                 
                         </ul> 
                 </li>
